# Drone_Hunter

Otonom_drone_sistemi/: CMakeLists.txt
Otonom_drone_sistemi/Src/: main.c
Otonom_drone_sistemi/scripts/: flash-stm32.ps1
